implement login and generate lucky number

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>devfest-event</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script src="https://www.gstatic.com/firebasejs/ui/4.2.0/firebase-ui-auth__vi.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.2.0/firebase-ui-auth.css" />
   </head>
   <body>
     <noscript>
